--- a/core/src/test/resources/config.properties
+++ b/core/src/test/resources/config.properties
@@ -1,11 +1,12 @@
-context=creson
-image=0track/infinispan-creson-server:latest
-app=serverless-executor-service
+context=dso
+image=0track/dso-server:latest
+app=serverless-smile
 version=0.1-SNAPSHOT
-aws.region=eu-west-2
+aws.region=us-east-1
 aws.iam.role=arn:aws:iam::667743079194:role/slambda_lambda_function
-aws.s3.bucket=serverless-executor-service
-aws.s3.key=serverless-executor-service.zip
-aws.lambda.function.name=serverless-executor-service
+aws.lambda.function.name=serverless-smile
 aws.lambda.function.handler=smile.util.StatefulHandler
-aws.lambda.function.arn=arn:aws:lambda:eu-west-2:667743079194:function:serverless-executor-service
+aws.lambda.function.arn=arn:aws:lambda:us-east-1:667743079194:function:serverless-smile
+dso.server=35.245.7.205:11222
+smile.threads=1000
+logging=true
